--- a/app/assets/stylesheets/proui_overwrite_app.css.less
+++ b/app/assets/stylesheets/proui_overwrite_app.css.less
@@ -919,10 +919,6 @@ select.select2-styles {
   padding-right: 5px;
 }
 
-#head-dashboard-selector {
-  display: none;
-}
-
 /* devices, Tablets (>767px) */
 @media screen and (min-width: 768px) {
 
@@ -946,35 +942,57 @@ select.select2-styles {
   }
 }
 
-/* devices, Tablets (>1050px) */
-@media screen and (min-width: 1050px) {
-   #head-dashboard-selector {
-    display: block;
-  } 
+
+#head-dashboard-selector.without-announcement {
+  display: none;
+}
+
+#head-dashboard-selector.with-announcement {
+  display: none;
+}
+
+#announcements-admin {
+  display: none;
 }
 
 
-/* devices, Tablets (<1250px) */
-@media screen and (max-width: 1250px) {
+@media screen and (min-width: 545px) {
+  #announcements-admin {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 774px) {
   li#announcements {
     display: none;
   }  
 }
 
-
-/* devices, Tablets (>1250px) */
-@media screen and (min-width: 1250px) {
+@media screen and (min-width: 775px) {
   li#announcements {
     width: 200px;
     overflow: scroll;
   } 
   li#announcements ul li .announcement-text {
     width: 120px;
+  } 
+}
+
+@media screen 
+and (min-width: 1075px) {
+  #head-dashboard-selector.without-announcement {
+    display: block;
   }
 }
 
+@media screen 
+and (min-width: 1275px) {
+    #head-dashboard-selector.with-announcement {
+    display: block;
+  } 
+}
 
-/* devices, Tablets (>1450px) */
+/* devices, Tablets (>1475px) */
 @media screen and (min-width: 1450px) {
   li#announcements {
     width: 400px;
@@ -983,6 +1001,7 @@ select.select2-styles {
       width: 320px;
   }
 }
+
 
 @media print {
   .page-break-before {
